--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,3 +1,9 @@
+// =====================
+// FormStyle
+// ---------------------
+// フォーム
+// =====================
+
 .Form {
   margin: auto;
   max-width: 400px;
