--- a/app/assets/stylesheets/components/_imageSlide.scss
+++ b/app/assets/stylesheets/components/_imageSlide.scss
@@ -1,23 +1,31 @@
-//Carousel
+@charset 'utf-8';
+
+// =====================
+// ImageSlide
+// ---------------------
+// 画像カルーセル
+// =====================
+
 .ImageSlide {
   position: relative;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  //画像のラッパー
+  // 画像のラッパー
   &__main {
     display: flex;
     flex-wrap: nowrap;
   }
-  //画像１つ分
+  // 画像1つ分
   &__item {
     flex: 0 0 80%;
   }
-  //本体画像
+  // 画像本体：高さに合わせてアス比を保つ指定
   &__image {
     width: 100%;
     height: auto;
   }
+  // インジケーター領域
   &__sub {
     position: relative;
     top: -40px;
@@ -27,27 +35,31 @@
       top: -20px;
     }
   }
+  // インジケーターの○ひとつぶん
   &__dot {
     display: block;
     overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-    cursor: pointer;
+    margin-right: 20px;
     width: 20px;
     height: 20px;
     border: 1px solid $color-black;
     border-radius: 10px;
-    margin-right: 20px;
+    text-indent: 100%;
+    white-space: nowrap;
+    cursor: pointer;
     &:last-child {
       margin-right: 0;
+    }
+    &:hover {
+      background: rgba($color-black, .7);
     }
     &.isActive {
       background: $color-black;
     }
     @include mq-sp {
+      margin-right: 10px;
       width: 10px;
       height: 10px;
-      margin-right: 10px;
     }
   }
 }
