--- a/app/assets/stylesheets/components/_newsList.scss
+++ b/app/assets/stylesheets/components/_newsList.scss
@@ -1,16 +1,28 @@
+@charset 'utf-8';
+
+// =====================
+// NewsList
+// ---------------------
+// お知らせ一覧
+// =====================
+
 .NewsList {
   display: table;
-  border-spacing: 0px $space-unit/2;
+  border-spacing: 0 $space-unit/2;
   border-collapse: separate;
   @include mq-sp {
     font-size: 12px;
   }
-  &__item {
+
+  &__item　{
     display: table-row;
   }
   &__head {
     display: table-cell;
     padding-right: $column-space;
+    @include mq-sp {
+      font-size: 12px;
+    }
   }
   &__body {
     display: table-cell;
