--- a/app/assets/stylesheets/components/common/_footer.scss
+++ b/app/assets/stylesheets/components/common/_footer.scss
@@ -1,3 +1,11 @@
+@charset 'utf-8';
+
+// =====================
+// Footer
+// ---------------------
+// グローバルフッター
+// =====================
+
 .Footer {
   display: flex;
   justify-content: space-between;
