--- a/app/assets/stylesheets/components/common/_menu.scss
+++ b/app/assets/stylesheets/components/common/_menu.scss
@@ -1,3 +1,5 @@
+@charset 'utf-8';
+
 .Menu {
   display: flex;
   justify-content: space-around;
@@ -10,10 +12,12 @@
     padding: 10px 15px;
     text-transform: uppercase;
   }
+  // フッターのメニュー
   &--sub {
     flex-direction: column;
   }
 }
+
 
 .SpMenu {
   @include mq-sp {
@@ -23,21 +27,25 @@
     left: 0;
     z-index: -1;
     opacity: 0;
-    transition: opacity 0s 0.3s ease;
+    transition: opacity 0s .3s ease;
     .isOpened & {
       opacity: 1;
       transition: opacity 0s 0s ease;
     }
   }
+  // 本文のラッパー
   &__wrapper {
     left: 0;
     width: 100%;
+    transition: left .3s 0s ease;
     &.isOpened {
       position: fixed;
       left: $sp-menu-width;
-      box-shadow: 0 1px 10px rgba(black, 0.3);
+      z-index: 1;
+      box-shadow: 0 1px 10px rgba(black, .3);
     }
   }
+  // メニュー以外の部分をタップでメニュー開閉するためのオーバーレイ
   &__overlay {
     position: relative;
     display: none;
